Some PMD recommendations implemented